footer section complete

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
     <div class="container">
         <h2 class="section-title">Projects</h2>
         <div class="row">
-            <div class="card mb-2 col-12 col-sm-12 col-md-12 col-lg-5">
+            <div class="card mb-2 mr-2 col-12 col-sm-12 col-md-12 col-lg-5">
                 <div class="row text-center">
                     <div class="col d-flex justify-content-end">
                         <img
@@ -302,108 +302,107 @@
                     </p>
                 </div>
             </div>
-            <div class="card mb-2 col-12 col-sm-12 col-md-12 col-lg-5">
+            <div class="card mb-2 mr-2 col-12 col-sm-12 col-md-12 col-lg-5">
                 <div class="row text-center">
-                    <div class="row text-center justify-content-around">
-                        <div class="col d-flex justify-content-end">
+                    <div class="col d-flex justify-content-end">
+                        <img
+                                src="img/denmaublog.png"
+                                alt="foodfit app"
+                                height="400"
+                                width="200"
+                                class="border border-success"
+                        />
+                    </div>
+                    <div class="col space-equally-vertically">
+                        <div><p class="card-title">Denmau Blog</p></div>
+                        <div>
                             <img
-                                    src="img/denmaublog.png"
-                                    alt="foodfit app"
-                                    height="400"
-                                    width="200"
-                                    class="border border-success"
+                                    src="img/python.png"
+                                    alt="java"
+                                    height="66"
+                                    width="67"
                             />
                         </div>
-                        <div class="col space-equally-vertically">
-                            <div><p class="card-title">Denmau Blog</p></div>
-                            <div>
-                                <img
-                                        src="img/python.png"
-                                        alt="java"
-                                        height="66"
-                                        width="67"
-                                />
-                            </div>
-                            <div>
-                                <img
-                                        src="img/django.png"
-                                        alt="firebase"
-                                        height="75"
-                                        width="58"
-                                />
-                            </div>
-                            <div>
-                                <a
-                                        href="http://denmaublog.herokuapp.com/"
-                                        class="btn btn-outline-primary"
-                                >View on Heroku</a
-                                >
-                            </div>
-                            <div>
-                                <a
-                                        href="https://github.com/denmau/100-days-of-code/tree/main/day-2-django-blog"
-                                        class="btn btn-outline-secondary"
-                                >View on GitHub</a
-                                >
-                            </div>
+                        <div>
+                            <img
+                                    src="img/django.png"
+                                    alt="firebase"
+                                    height="75"
+                                    width="58"
+                            />
+                        </div>
+                        <div>
+                            <a
+                                    href="http://denmaublog.herokuapp.com/"
+                                    class="btn btn-outline-primary"
+                            >View on Heroku</a
+                            >
+                        </div>
+                        <div>
+                            <a
+                                    href="https://github.com/denmau/100-days-of-code/tree/main/day-2-django-blog"
+                                    class="btn btn-outline-secondary"
+                            >View on GitHub</a
+                            >
                         </div>
                     </div>
-                    <div class="card-body">
-                        <p class="card-text">
-                            This is <span class="color-red">python Django blog</span> that
-                            allows <span class="color-red">authenticated</span> users to
-                            write and post blog articles. Authors are allowed to create,
-                            read, update or even delete their articles (<span
-                                class="color-red"
-                        >CRUD</span
-                        >). This web application allows any logged in user to leave a
-                            comment for each article. There is also a reset password
-                            feature for users who forget their passwords. Styling is done
-                            by <span class="color-red">bootstrap</span>.
-                        </p>
-                        <p class="card-text">
-                            The admin has rights to edit or delete any article or comment.
-                        </p>
-                        <p class="card-text">
-                            <small class="text-muted"
-                            >The App uses <span class="color-red">SQLite</span> Database
-                                for the development version, and
-                                <span class="color-red">PostgreSQL</span> for the deployed
-                                version.
-                            </small>
-                        </p>
-                    </div>
                 </div>
-            </div>
-            <div class="card mb-2 col-12 col-sm-12 col-md-12 col-lg-5">
                 <div class="card-body">
                     <p class="card-text">
-                        This GitHub repo contains most of my Machine Learning
-                        mini-projects, and those I encountered while taking the
-                        <a
-                                href="https://www.coursera.org/account/accomplishments/professional-cert/QP3343SDDDGG?utm_product=prof"
-                                target="_blank"
-                        >DeepLearning.ai Tensorflow Professional Certificate</a
-                        >.
+                        This is <span class="color-red">python Django blog</span> that
+                        allows <span class="color-red">authenticated</span> users to
+                        write and post blog articles. Authors are allowed to create,
+                        read, update or even delete their articles (<span
+                            class="color-red"
+                    >CRUD</span
+                    >). This web application allows any logged in user to leave a
+                        comment for each article. There is also a reset password
+                        feature for users who forget their passwords. Styling is done
+                        by <span class="color-red">bootstrap</span>.
                     </p>
-                    <p class="card-text">Mini-Projects here include:</p>
-                    <ul>
-                        <li>Computer Vision - Convolutional Neural Networks</li>
-                        <li>Computer Vision - Detecting Horses vs Humans</li>
-                        <li>
-                            Natural Language Processing - predicting a Shakes Pear article
-                        </li>
-                        <li>Time Series & Predictions - Working with stock data</li>
-                    </ul>
-                    <a
-                            href="https://github.com/denmau/tensorflow-practice"
-                            class="btn btn-primary"
-                    >View on GiHub</a
-                    >
+                    <p class="card-text">
+                        The admin has rights to edit or delete any article or comment.
+                    </p>
+                    <p class="card-text">
+                        <small class="text-muted"
+                        >The App uses <span class="color-red">SQLite</span> Database
+                            for the development version, and
+                            <span class="color-red">PostgreSQL</span> for the deployed
+                            version.
+                        </small>
+                    </p>
                 </div>
             </div>
         </div>
+        <div class="card mb-2 mr-2 col-12 col-sm-12 col-md-12 col-lg-5">
+            <div class="card-body">
+                <p class="card-text">
+                    This GitHub repo contains most of my Machine Learning
+                    mini-projects, and those I encountered while taking the
+                    <a
+                            href="https://www.coursera.org/account/accomplishments/professional-cert/QP3343SDDDGG?utm_product=prof"
+                            target="_blank"
+                    >DeepLearning.ai Tensorflow Professional Certificate</a
+                    >.
+                </p>
+                <p class="card-text">Mini-Projects here include:</p>
+                <ul>
+                    <li>Computer Vision - Convolutional Neural Networks</li>
+                    <li>Computer Vision - Detecting Horses vs Humans</li>
+                    <li>
+                        Natural Language Processing - predicting a Shakes Pear article
+                    </li>
+                    <li>Time Series & Predictions - Working with stock data</li>
+                </ul>
+                <a
+                        href="https://github.com/denmau/tensorflow-practice"
+                        class="btn btn-primary"
+                >View on GiHub</a
+                >
+            </div>
+        </div>
     </div>
+    <!--    </div>-->
 </section>
 
 <!-- Contact Me Section start -->
@@ -492,68 +491,56 @@
 
 <!--Footer Start-->
 <div class="fadegreytoblack"></div>
-<footer class="background-black">
-    <div class="container-fluid">
-        <div class="container">
-            <p class="text-small">All rights reserved | Copyright © 2021</p>
-            <p class="text-small">NAIVASHA, KENYA</p>
-            <p class="text-small">
-                icons by Flaticon & iconmonstr, hero image from undraw
-            </p>
+<footer>
+    <div class="container-fluid background-black">
+        <div class="container color-white text-center">
+            <div class="row">
+                <div class="col-12 col-md-4">All rights reserved | Copyright © 2021</div>
+                <div class="col-12 col-md-4">Naivasha, Kenya</div>
+                <div class="col-12 col-md-4">
+                    <div class="socials-container">
+                        <a href="https://www.twitter.com/denmau6" class="social-container">
+                            <img
+                                    src="img/iconmonstr-twitter.svg"
+                                    alt="twitter"
+                                    height="15"
+                            />
+                        </a>
 
-            <div class="row socials-container w-75 mx-auto">
-                <div
-                        class="col"
-                        style="cursor: pointer"
-                        onclick="window.location='https://www.twitter.com/devdenmau';"
-                >
-                    <div class="social-container">
-                        <img
-                                src="img/iconmonstr-twitter.svg"
-                                alt="twitter"
-                                height="15"
-                        />
-                    </div>
-                </div>
+                        <a href="https://www.linkedin.com/in/denmau" class="social-container">
+                            <img
+                                    src="img/iconmonstr-linkedin.svg"
+                                    alt="linkedin"
+                                    height="15"
+                            />
+                        </a>
 
-                <div
-                        class="col"
-                        style="cursor: pointer"
-                        onclick="window.location='https://www.linkedin.com/in/denmau';"
-                >
-                    <div class="social-container">
-                        <img
-                                src="img/iconmonstr-linkedin.svg"
-                                alt="linkedin"
-                                height="15"
-                        />
-                    </div>
-                </div>
+                        <a href="https://www.github.com/denmau" class="social-container">
+                            <img
+                                    src="img/iconmonstr-github.svg"
+                                    alt="github"
+                                    height="15"
+                            />
+                        </a>
 
-                <div
-                        class="col"
-                        style="cursor: pointer"
-                        onclick="window.location='https://www.github.com/denmau';"
-                >
-                    <div class="social-container">
-                        <img src="img/iconmonstr-github.svg" alt="github" height="15"/>
-                    </div>
-                </div>
+                        <a href="mailto:dmkamau475@gmail.com" class="social-container">
+                            <img
+                                    src="img/iconmonstr-email.svg"
+                                    alt="email"
+                                    height="15"
+                            />
+                        </a>
 
-                <div
-                        class="col"
-                        style="cursor: pointer"
-                        onclick="window.location='mailto:dmkamau475@gmail.com';"
-                >
-                    <div class="social-container">
-                        <img src="img/iconmonstr-email.svg" alt="email" height="15"/>
                     </div>
                 </div>
             </div>
+            <!--blank line to add a margin bottom-->
+            <br>
         </div>
     </div>
 </footer>
 <!--Footer End-->
+
 </body>
 <!-- Custom JS FIle  -->
 <script src="js/index.js"></script>
