fully responsive website

--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
         </div>
         <!-- Contact Form End -->
 
-        <div class="row socials-container">
+        <div class="row socials-container background-grey">
 
             <div class="col">
                 <div class="social-container" style="cursor: pointer"
