fix broken link

--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
                 <div class="col-12 col-md-4">Naivasha, Kenya</div>
                 <div class="col-12 col-md-4">
                     <div class="socials-container">
-                        <a href="https://www.twitter.com/denmau6" class="social-container">
+                        <a href="https://www.twitter.com/devdenmau" class="social-container">
                             <img
                                     src="img/iconmonstr-twitter.svg"
                                     alt="twitter"
