optimize for seo and fix card margins

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="description"
-          content="I am a 21 year old Full Stack Machine Learning Engineer. I study Computer Science at South Eastern Kenya University."/>
+          content="I am a Full Stack Machine Learning Engineer based in Kenya. My speciality is Machine Learning, Python Django and react."/>
     <meta name="author" content="Dennis Kamau"/>
 
     <!-- Canonical Link -->
@@ -87,9 +87,9 @@
                     <p>I develop for the web</p>
                 </div>
                 <div>
-                    <p class="about-me-summary">I am a 21 year old Full Stack Machine Learning Engineer. I am a student
-                        at South Eastern Kenya University, where I study Computer Science. I am fortunate to have worked
-                        alongside senior developers who I envy and draw inspiration
+                    <p class="about-me-summary">I am a Full Stack Machine Learning Engineer based in Kenya. My
+                        speciality is Machine Learning, Python Django and react. I am
+                        fortunate to have worked alongside senior developers who I envy and draw inspiration
                         from. This has taught me to write code that is maintainable, easy to reuse and understand.</p>
                 </div>
                 <!-- TODO: animated upward arrow to show scrolling needed-->
@@ -389,7 +389,7 @@
                 </div>
             </div>
         </div>
-        <!--    </div>-->
+    </div>
 </section>
 
 <!-- Contact Me Section start -->
@@ -479,6 +479,7 @@
                 </div>
             </div>
         </div>
+    </div>
 </section>
 <!-- Contact Me Section end -->
 
