remove footer boilerplate code

--- a/index.html
+++ b/index.html
@@ -489,8 +489,8 @@
     <div class="container-fluid background-black">
         <div class="container color-white text-center">
             <div class="row">
-                <div class="col-12 col-md-4">All rights reserved | Copyright © 2021</div>
-                <div class="col-12 col-md-4">Naivasha, Kenya</div>
+                <div class="col-12 col-md-4"><p>All rights reserved | Copyright © 2021</p></div>
+                <div class="col-12 col-md-4"><p>Naivasha, Kenya</p></div>
                 <div class="col-12 col-md-4">
                     <div class="socials-container">
                         <a href="https://www.twitter.com/devdenmau" class="social-container">
