--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="container">
         <!-- Navigation bar -->
         <nav class="navbar navbar-expand-md background-black">
-            <a href="https://www.denmau.me" class="branding">denmau</a>
+            <a href="https://www.denmau.me" class="branding">Denmau</a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
                     aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -95,7 +95,7 @@
 <!-- Skills  -->
 <section id="skills">
     <div class="container">
-        <h2 class="section-title">Skills</h2>
+        <h2 class="section-title">My Skills</h2>
         <p class="section-sub-title">Web Development</p>
         <div class="container cards-container">
             <div class="row">
@@ -230,7 +230,7 @@
     <div class="container">
         <h2 class="section-title">Projects</h2>
         <div class="row justify-content-between">
-            <div class="card mb-2 col-12 col-sm-12 col-md-12 col-lg-5">
+            <div class="card col-12 col-sm-12 col-md-12 col-lg-5">
                 <div class="row text-center">
                     <div class="col d-flex justify-content-end">
                         <img
@@ -293,7 +293,7 @@
                     </p>
                 </div>
             </div>
-            <div class="card mb-2 col-12 col-sm-12 col-md-12 col-lg-5">
+            <div class="card col-12 col-sm-12 col-md-12 col-lg-5">
                 <div class="row text-center">
                     <div class="col d-flex justify-content-end">
                         <img
@@ -365,7 +365,7 @@
                 </div>
             </div>
 
-            <div class="card mb-2 col-12 col-sm-12 col-md-12 col-lg-5">
+            <div class="card col-12 col-sm-12 col-md-12 col-lg-5">
                 <div class="card-body">
                     <p class="card-text">
                         This GitHub repo contains most of my Machine Learning
@@ -462,7 +462,7 @@
                     <img src="img/iconmonstr-email.svg" alt=""/>
                 </div>
                 <div
-                        class="color-blue text-small"
+                        class="color-black text-small"
                         onclick="window.location='mailto:dmkamau475@gmail.com';"
                 >
                     dmkamau475@gmail.com
@@ -476,7 +476,7 @@
                     <img src="img/iconmonstr-whatsapp.svg" alt="email"/>
                 </div>
                 <div
-                        class="color-blue text-small"
+                        class="color-black text-small"
                         onclick="window.location='https://api.whatsapp.com/send?phone=254759360020';"
                 >
                     +254759360020
