--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
                     <img src="img/iconmonstr-email.svg" alt=""/>
                 </div>
                 <div
-                        class="color-black text-small"
+                        class="color-black text-small" style="cursor: pointer"
                         onclick="window.location='mailto:dmkamau475@gmail.com';"
                 >
                     dmkamau475@gmail.com
@@ -476,7 +476,7 @@
                     <img src="img/iconmonstr-whatsapp.svg" alt="email"/>
                 </div>
                 <div
-                        class="color-black text-small"
+                        class="color-black text-small" style="cursor: pointer"
                         onclick="window.location='https://api.whatsapp.com/send?phone=254759360020';"
                 >
                     +254759360020
