change foodfit app banner image

--- a/index.html
+++ b/index.html
@@ -257,8 +257,9 @@
                         <div>
                             <!--TODO: Add Link to FoodFit APK-->
                             <a
-                                    href="#"
+                                    href="https://drive.google.com/drive/folders/1cmIpdWfX9TAK08KQArfVofIYuxxUxYm4?usp=sharing"
                                     class="btn btn-primary"
+                                    target="_blank"
                             >Download APP</a
                             >
                         </div>
